Add static analysis tools